# de-dorf

./: .gitignore  .pre-commit-config.yaml  README.md  Weitere_Zahlen.md  cspell-words.txt  cspell.config.yaml  pyproject.toml  requirements.txt
.github/workflows/: check.yml
.streamlit/: config-prod.toml  config.toml  secrets-EXAMPLE.toml
data/: countries.tsv  data.tsv  flaechennutzung.csv  population.tsv
scripts/: config_convert.py  deploy.sh  install.sh  run.sh  update.sh
src/: app.py  helper.py  main.py
tests/: app_test.py  data_test.py  test_app.py  test_data.py
