[project]
name = "de-dorf"
version = "0.1.0"
description = "Statistiken zur deutschen Bevölkerung auf ein Dorf umgerechnet"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.2.3",
    "pandas==2.2.3",
    "pyarrow==20.0.0",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "tomli-w>=1.2.0",
    "watchdog>=6.0.0",
]
